# Exokernel

./: Cargo.toml  README.md  build.rs  rust-toolchain.toml
.cargo/: config.toml
bootloader/: README.md
kernel/: Cargo.toml  README.md  build.rs
kernel/arch/: README.md
kernel/arch/x86_64/: README.md
kernel/arch/x86_64/bootloader/: README.md
kernel/arch/x86_64/bootloader/bios/: Cargo.toml  build.rs
kernel/arch/x86_64/bootloader/bios/.cargo/: config.toml
kernel/arch/x86_64/bootloader/bios/src/: main.rs
kernel/arch/x86_64/bootloader/bios/stage-1/: Cargo.toml  linker.ld  target.json
kernel/arch/x86_64/bootloader/bios/stage-1/.cargo/: config.toml
kernel/arch/x86_64/bootloader/bios/stage-1/src/: bootloader.s  dap.rs  main.rs
kernel/arch/x86_64/bootloader/bios/stage-2/: Cargo.toml  linker.ld  target.json
kernel/arch/x86_64/bootloader/bios/stage-2/.cargo/: config.toml
kernel/arch/x86_64/bootloader/bios/stage-2/src/: dap.rs  fat.rs  gdt.rs  lib.rs  main.rs  memory.rs  partitions.rs  protected_mode.rs  setup.s  vesa.rs
kernel/arch/x86_64/bootloader/bios/stage-2/src/disk/: dap.rs  disk.rs  fat.rs  file.rs  mod.rs
kernel/arch/x86_64/bootloader/bios/stage-2/src/new/disk/: fat.rs
kernel/arch/x86_64/bootloader/bios/stage-2/src/old/: gdt.rs  main.rs  memory.rs
kernel/arch/x86_64/bootloader/bios/stage-2/src/old/disk/: disk.rs  fat.rs
kernel/arch/x86_64/bootloader/bios/stage-2/src/old/util/: print.rs
kernel/arch/x86_64/bootloader/bios/stage-2/src/util/: fat.rs  mod.rs  print.rs
kernel/arch/x86_64/bootloader/bios/stage-3/: Cargo.toml  build.rs  linker.ld  target.json
kernel/arch/x86_64/bootloader/bios/stage-3/src/: lib.rs  main.rs
kernel/arch/x86_64/bootloader/bios/stage-3/src/util/: mod.rs
kernel/common/src/: boot_info.rs
kernel/lib/: Cargo.toml
kernel/lib/src/: caps.rs  elf.rs  io.rs  ipc.rs  lib.rs  mem.rs  process.rs  syscall.rs
kernel/shared/: Cargo.toml
kernel/shared/src/: caps.rs  error.rs  ipc.rs  lib.rs  syscall.rs
kernel/src/: allocator.rs  elf.rs  gdt.rs  interrupts.rs  main.rs  pci.rs  serial.rs  userspace.rs
kernel/src/caps/: mod.rs  table.rs
kernel/src/memory/: frame_allocator.rs  mod.rs
kernel/src/process/: context.rs  mod.rs  scheduler.rs
kernel/src/syscall/: caps.rs  handler.rs  io.rs  ipc.rs  memory.rs  mod.rs  numbers.rs  process.rs
kernel/src/task/: context.rs  mod.rs  process.rs  scheduler.rs
lib/bios-util/: Cargo.toml
lib/bios-util/src/: lib.rs  mbr.rs
lib/fs/: Cargo.toml  README.md
lib/fs/src/: allocator.rs  bands.rs  helper.rs  lib.rs  partition.rs  structure.rs
libos/core/: Cargo.toml
libos/core/src/: error.rs  lib.rs  types.rs
libos/fs/: Cargo.toml
libos/fs/src/: dentry.rs  file.rs  inode.rs  lib.rs  mount.rs  path.rs  superblock.rs  traits.rs
libos/io/: Cargo.toml
libos/io/src/: block.rs  buffer.rs  lib.rs
libos/lib/: Cargo.toml
libos/lib/src/: ctype.rs  lib.rs  print.rs  string.rs
libos/mm/: Cargo.toml
libos/mm/src/: allocator.rs  lib.rs  page.rs  slab.rs
libos/sync/: Cargo.toml
libos/sync/src/: lib.rs
libos/time/: Cargo.toml
libos/time/src/: lib.rs
linux/core/: Cargo.toml
linux/core/macros/: Cargo.toml
linux/core/src/: errno.rs  initcall.rs  lib.rs  types.rs
linux/drivers/fat/: Cargo.toml  build.rs
linux/drivers/fat/src/: lib.rs
linux/include/asm-generic/: errno-base.h  errno.h  int-ll64.h  ioctl.h
linux/io/: Cargo.toml
linux/lib/: Cargo.toml
linux/mm/: Cargo.toml
linux/sync/: Cargo.toml
linux/vfs/: Cargo.toml
os/: Cargo.toml  build.rs  linker.ld  x86_64-exo-user.json
os/.cargo/: config.toml
os/src/: lib.rs  main.rs
src/: main.rs
userland/hello/: Cargo.toml
(+86 files in other folders)
