[package]
name = "exokernel"
version = "0.1.0"
edition = "2021"

build = "build.rs"

[workspace]
members = [
    # File system
    "lib/fs",

    # x86_64 BIOS Bootloader
    "kernel/arch/x86_64/bootloader/bios/stage-1",
    "kernel/arch/x86_64/bootloader/bios/stage-2",
    "kernel/arch/x86_64/bootloader/bios/stage-3"
]

[build-dependencies]
llvm-tools = "0.1.1"

#File creation utils
mbrman = "0.5.1"
fatfs = "0.3.5"
# fs = { path = "lib/fs" }

anyhow = "1.0.67"

[profile.stage-1]
inherits = "release"
opt-level = "s"
lto = true
codegen-units = 1
debug = false
overflow-checks = false

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"