[package]
name = "exokernel"
version = "0.1.0"
edition = "2021"

build = "build.rs"

[workspace]
members = [
    # Libraries
    "lib/*",

    # x86_64 bios bootloader
    "kernel/arch/x86_64/bootloader/bios/*",

    # Common package
    "kernel/common"
]

[build-dependencies]
llvm-tools = "0.1.1"

#File creation utils
mbrman = { git = "https://github.com/BigBadE/mbrman/" }
fatfs = "0.3.6"
anyhow = "1.0.88"

[profile.stage-1]
inherits = "release"
opt-level = "s"
lto = true
codegen-units = 1
debug = false
overflow-checks = false

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"