[package]
name = "exokernel"
version = "0.1.0"
edition = "2024"

build = "build.rs"

[workspace]
resolver = "3"
members = [
    "kernel",
    "kernel/shared",
    "kernel/lib",
    "os",
    "userland/hello",
    # Base libOS
    "libos/core",
    "libos/mm",
    "libos/sync",
    "libos/io",
    "libos/fs",
    "libos/time",
    "libos/lib",
    # Linux compatibility layer
    "linux/core/macros",
    "linux/core",
    "linux/mm",
    "linux/sync",
    "linux/io",
    "linux/lib",
    "linux/vfs",
    "linux/drivers/fat",
]

[dependencies]
ovmf-prebuilt = "0.2.4"

[build-dependencies]
bootloader = { version = "0.11", default-features = false, features = ["uefi"] }
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
