[package]
name = "kernel"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
bootloader_api = "0.11"
uart_16550 = "0.4.0"
x86_64 = "0.15.2"
spin = "0.9"
linked_list_allocator = "0.10"
exo-shared = { path = "shared" }

[build-dependencies]
os = { path = "../os", artifact = "bin", target = "x86_64-unknown-none" }
